# cuda_video_stub

./: CMakeLists.txt  LICENSE  README.md  stub.c
12.1.14/: cuviddec.h  nvcuvid.h
12.2.72/: cuviddec.h  nvEncodeAPI.h  nvcuvid.h
scripts/: build.sh
